# Zus

./: .gitignore  README.md
frontend/: .env.example  App.jsx  ZusCampaigns.jsx  ZusProtocol_Detail.jsx  ZusRewards.jsx  app.css  config.js  main.jsx  package.json  pnpm-lock.yaml  zusProtocolAbi.js
tui/: Cargo.toml
tui/src/: error.rs  main.rs  types.rs
userslist/: Cargo.toml
userslist/src/: main.rs  merkle.rs  types.rs
zus_addy/: Nargo.toml  Prover.toml
zus_addy/src/: main.nr
zusprotocol/: README.md
zusprotocol/cache/: solidity-files-cache.json
zusprotocol/scripts/: create_campaign.sh  create_three_reward_campaigns.sh  deploy_zusprotocol.sh
zusprotocol/src/: ZusProtocol.sol
zusprotocol/test/: ZusProtocol.t.sol
